# AltoLogica

./: README.md  manage.py  pyproject.toml
AltoLogicaAPI/: asgi.py  settings.py  urls.py  wsgi.py
api/: urls.py  views.py
